# definite-protocol-starknet-main

./: DEPLOYMENT_ADDRESSES.json  README.md  Scarb.toml  account.json  account_starkli.json  deploy_correct_order.sh  deploy_starkli.sh  deploy_with_sncast.sh  fetched_account.json  index.html  keystore.json  package-lock.json  package.json  requirements.txt  signer.json  snfoundry.toml  tailwind.config.js  vite.config.ts  vitest.config.ts
compiled_contracts/: compilation_manifest.json
contracts/: README.md
contracts/cairo/: LICENSE  Scarb.toml
contracts/common/: pyteal_imports.py
definite-protocol-starknet-contracts-main/: DEPLOYMENT_COMPLETE.md  README.md  Scarb.toml  state-definite-protocol-task.md
definite-protocol-starknet-contracts-main/cli/: Cargo.toml  README.md  build.sh  demo.sh
definite-protocol-starknet-contracts-main/cli/src/: config.rs  main.rs  theme.rs  utils.rs
definite-protocol-starknet-contracts-main/cli/src/commands/: analytics.rs  config.rs  contract.rs  dev.rs  mod.rs  protocol.rs  user.rs  user_simple.rs
definite-protocol-starknet-contracts-main/cli/src/contracts/: hedging.rs  mod.rs  oracle.rs  rebalancing.rs  risk.rs  token.rs  vault.rs
definite-protocol-starknet-contracts-main/cli/tests/: integration_tests.rs
scripts/: compile_contracts.py  deploy-all.sh  deploy.ts  deploy_all_contracts.py  deploy_complete_protocol.py  deploy_enterprise_protocol.py  deploy_final.py  deploy_simple.ts  deploy_simple_contracts.py  simple_deploy.py  test_enterprise_contracts.py
src/: App.tsx  index.css  main.tsx  polyfills.ts
tests/: setup.ts
(+67 files in other folders)
